# CVPaper-Reader

./: .gitignore  AGENTS.md  README.md
.serena/: project.yml
nextjs-frontend/: .env.local.example  README.md  package-lock.json  package.json
nextjs-frontend/scripts/: embed.mjs  generate-seed.mjs
nextjs-frontend/src/app/: page.tsx
nextjs-frontend/src/app/api/search/: route.ts
nextjs-frontend/src/components/: article-card.tsx  search-form.tsx
nextjs-frontend/src/lib/: embeddings.ts  search.ts  supabase.ts
python-crawler/: .env.example  README.md  config.py  crawler.py  embedding.py  logging_config.py  main.py  models.py  pyproject.toml  supabase_client.py
supabase/: README.md  config.toml  schema.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20240504120000_articles.sql  20240504121000_search_articles.sql  20251004120000_recreate_search_articles.sql
todo/: 000_plan_conventions.md  01_supabase_setup.md  02_python_env_and_schema.md  03_crawler_cvpr.md  04_embeddings_and_upsert.md  05_automation_and_scheduling.md  06_frontend_search_api.md  07_frontend_ui_cards.md  08_quality_logging_testing.md  09_deploy_and_operations.md
